--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     display: block;
     opacity: 1;
     z-index: -1;
-    /* Hide all controls and play buttons */
+    /* Hide all controls and play buttons - inline styles also added */
     -webkit-media-controls: none !important;
     -webkit-media-controls-enclosure: none !important;
     -webkit-media-controls-panel: none !important;
